log
Sat 22 Apr 2023 12:40:38 AM UTC: 
 tests:  1|8
total_score: 0/70
88a44c9
Sat 22 Apr 2023 12:50:51 AM UTC: 
 treemap.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeNode’:
treemap.c:32:9: error: unused variable ‘pair’ [-Werror=unused-variable]
   32 |   Pair *pair = (Pair*) malloc(sizeof(Pair));
      |         ^~~~
treemap.c: In function ‘createTreeMap’:
treemap.c:44:16: error: statement with no effect [-Werror=unused-value]
   44 |   mapa -> root == NULL;
      |                ^
treemap.c:45:19: error: statement with no effect [-Werror=unused-value]
   45 |   mapa -> current == NULL;
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
41ed6b2
Sat 22 Apr 2023 12:51:04 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeNode’:
treemap.c:32:9: error: unused variable ‘pair’ [-Werror=unused-variable]
   32 |   Pair *pair = (Pair*) malloc(sizeof(Pair));
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
442505b
Sat 22 Apr 2023 12:51:58 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
9ba91e0
Sat 22 Apr 2023 01:03:04 AM UTC: 
 treemap.c | 24 ++++++++++++++++++++----
 1 file changed, 20 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
c6b676b
Sat 22 Apr 2023 01:04:42 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2531d53
Sat 22 Apr 2023 01:05:18 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
b2eeebe
Sat 22 Apr 2023 01:18:47 AM UTC: 
 treemap.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:76:20: error: ‘nuevo’ undeclared (first use in this function)
   76 |     tree -> root = nuevo;
      |                    ^~~~~
treemap.c:76:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:94:71: error: ‘nuevoNode’ undeclared (first use in this function)
   94 |   if(!tree -> lower_than(key, parent -> pair -> key)) parent->right = nuevoNode;
      |                                                                       ^~~~~~~~~
treemap.c: At top level:
treemap.c:103:1: error: expected identifier or ‘(’ before ‘}’ token
  103 | }
      | ^
Compilation failed
811754d
Sat 22 Apr 2023 01:19:13 AM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c:104:1: error: expected identifier or ‘(’ before ‘}’ token
  104 | }
      | ^
Compilation failed
8f90a7e
Sat 22 Apr 2023 01:19:26 AM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|0
b78a124
Sat 22 Apr 2023 01:19:42 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
453ba07
